--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Customizable Table</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="./lib/custom-table.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
+
 <body>
   <div class="app">
     <h1>Customizable Table</h1>
@@ -19,6 +22,8 @@
     </div>
     <div id="tableContainer"></div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script type="module" src="demo.js"></script>
 </body>
+
 </html>
